--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
 
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>쨍난도쿄여행</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body id="top">
+
+<header>
+  <h1>쨍♡난 도쿄 여행</h1>
+</header>
+
+<nav>
+  <ul>
+    <li><a href="#day1">9월 15일 (월)</a></li>
+    <li><a href="#day2">9월 16일 (화)</a></li>
+    <li><a href="#day3">9월 17일 (수)</a></li>
+    <li><a href="#day4">9월 18일 (목)</a></li>
+    <li><a href="#day5">9월 19일 (금)</a></li>
+  </ul>
+</nav>
+
+<main>
+
+  <section id="day1">
+    <h2>9월 15일 (월)</h2>
+    <ul>
+      <li>비행기
+        <div class="content">
+          ✈️ 인천(T2) → 나리타 / 08:15 출발
+        </div>
+      </li>
+      <li>스카이 액세스_게이세이특급
+        <div class="content">
+          아사쿠사역 가는 방법 블로그: <a href="https://blog.naver.com/c131444/223944626950">링크</a>
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <section id="day2">
+    <h2>9월 16일 (화)</h2>
+    <ul>
+      <li>도쿄크루즈(아사쿠사 > 오다이바)
+        <div class="content">
+          11시 탑승, 모바일티켓: <a href="https://quickticket.moala.fun/books?id=ef71d6a9-a91c-456f-9ec4-4ed32c27f8d4">링크</a>
+        </div>
+      </li>
+      <li>건담/디지몬/자유의여신상
+        <div class="content">
+          오다이바 구경 및 에바초호기 관람
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <section id="day3">
+    <h2>9월 17일 (수)</h2>
+    <ul>
+      <li>닌자카페 12시 예약
+        <div class="content">
+          시부야 숙소 체크인 후 타워레코드, 몬자야끼, 라이브밴드 공연
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <section id="day4">
+    <h2>9월 18일 (목)</h2>
+    <ul>
+      <li>유니클로 시부야 커스텀프린팅 오픈런
+        <div class="content">
+          시부야 프리쿠라, 신주쿠 이동, 가부키쵸, JDM 자동차 투어, 오모이데요코초
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <section id="day5">
+    <h2>9월 19일 (금)</h2>
+    <ul>
+      <li>시부야 돈키호테 쇼핑
+        <div class="content">
+          나리타패스 이용 후 귀가
+        </div>
+      </li>
+    </ul>
+  </section>
+
+</main>
+
+<footer>
+  <p><a href="#top">맨 위로</a></p>
+  <p>© 만든이 : 김나은</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
