--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <nav>
   <ul>
+    <li><a href="#day0">항공/숙소</a></li>
     <li><a href="#day1">9월 15일 (월)</a></li>
     <li><a href="#day2">9월 16일 (화)</a></li>
     <li><a href="#day3">9월 17일 (수)</a></li>
