--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="secret">
       <ul>
         <li>항공
-          <div class="content">
+          <div class="content" style="display:none;>
             <p>✈️ 인천(T2) → 나리타 / 9월 15일 월요일 08:15 출발</p>
             <p>✈️ 나리타 → 인천(T2) / 9월 19일 금요일 19:05 출발</p>
             <p>✈️비행기 예약 내역 : <a href="https://mail.google.com/mail/mu/mp/515/#cv/tokyovoucher/1988d167a6b8b844">링크</a></p>
