--- a/index.html
+++ b/index.html
@@ -32,19 +32,17 @@
 
   <section id="day0">
     <h2>항공/숙소</h2>
-    <!-- 비밀번호 입력창 -->
-    <div>
-      <input type="password" id="password" placeholder="비밀번호">
-      <button onclick="checkPassword()">확인</button>
-    </div>
-    <div id="secret">
+  <!-- 비밀번호 입력창 -->
+  <div class="password-box">
+    <input type="password" id="password" placeholder="비밀번호">
+    <button id="passwordBtn">확인</button>
+  </div>
+    <div id="secret" class="hidden-content">
       <ul>
         <li>항공
-          <div class="content" style="display:none;>
             <p>✈️ 인천(T2) → 나리타 / 9월 15일 월요일 08:15 출발</p>
             <p>✈️ 나리타 → 인천(T2) / 9월 19일 금요일 19:05 출발</p>
             <p>✈️비행기 예약 내역 : <a href="https://mail.google.com/mail/mu/mp/515/#cv/tokyovoucher/1988d167a6b8b844">링크</a></p>
-          </div>
         </li>
         <li>숙소
           <div class="content">
