--- a/index.html
+++ b/index.html
@@ -59,67 +59,76 @@
   </section>
 
   <section id="day1">
-    <h2>9월 15일 (월)</h2>
+    <h2>9월 15일 (월) : 아사쿠사 한바끄~☆</h2>
     <ul>
-      <li>비행기
-        <div class="content">
-          ✈️ 인천(T2) → 나리타 / 08:15 출발
-        </div>
-      </li>
-      <li>스카이 액세스_게이세이특급
+      <li>비행기</li>
+      <li>아사쿠사역 가기 : 스카이 액세스/게이세이특급
         <div class="content">
           아사쿠사역 가는 방법 블로그: <a href="https://blog.naver.com/c131444/223944626950">링크</a>
         </div>
       </li>
+      <li>아사쿠사 숙소 체크인</li>
+      <li>헬로사이클</li>
+      <li>센소지 구경</li>
     </ul>
   </section>
 
   <section id="day2">
-    <h2>9월 16일 (화)</h2>
+    <h2>9월 16일 (화) : 오다이바 광광</h2>
     <ul>
       <li>도쿄크루즈(아사쿠사 > 오다이바)
         <div class="content">
-          11시 탑승, 모바일티켓: <a href="https://quickticket.moala.fun/books?id=ef71d6a9-a91c-456f-9ec4-4ed32c27f8d4">링크</a>
+          11시 탑승, 모바일티켓: <a href="https://quickticket.moala.fun/books?id=ef71d6a9-a91c-456f-9ec4-4ed32c27f8d4">링크</a><br>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d809.8895795828621!2d139.79850566678067!3d35.71248519594947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec47f298a41%3A0x304e9b1688338d74!2z7JWE7IKs7L-g7IKsIOuLiO2FkOuqrCDshKDssKnsnqU!5e0!3m2!1sko!2skr!4v1757216198646!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </li>
-      <li>건담/디지몬/자유의여신상
+      <li>건담
         <div class="content">
-          오다이바 구경 및 에바초호기 관람
+          변신시간 (주간) 11시 13시 15시 17시 (야간) 19시~21:30까지 30분단위
         </div>
       </li>
+      <li>디지몬 성지순례</li>
+      <li>스몰월드x에바초호기</li>
+      <li>자유의 여신상</li>
+      <li>지하철 타고 숙소 가기</li>
     </ul>
   </section>
 
   <section id="day3">
-    <h2>9월 17일 (수)</h2>
+    <h2>9월 17일 (수) : 닌자&시부야</h2>
     <ul>
+      <li>아사쿠사 숙소 체크아웃</li>
       <li>닌자카페 12시 예약
         <div class="content">
-          시부야 숙소 체크인 후 타워레코드, 몬자야끼, 라이브밴드 공연
+          ㅇㅇ
         </div>
       </li>
+      <li>시부야 숙소 체크인</li>
+      <li>시부야 타워레코드</li>
+      <li>시부야 몬자야끼</li>
+      <li>시부야 라이브밴드공연</li>
     </ul>
   </section>
 
   <section id="day4">
-    <h2>9월 18일 (목)</h2>
+    <h2>9월 18일 (목) : 이니셜D체험,,</h2>
     <ul>
-      <li>유니클로 시부야 커스텀프린팅 오픈런
-        <div class="content">
-          시부야 프리쿠라, 신주쿠 이동, 가부키쵸, JDM 자동차 투어, 오모이데요코초
-        </div>
+      <li>유니클로 하라주쿠점 커스텀프린팅 오픈런</li>
+      <li>기다리면서 시부야 프리쿠라</li>
+      <li>신주쿠 이동</li>
+      <li>신주쿠 가부키쵸 구경</li>
+      <li>JDM 자동차 투어</li>
+      <li>신주쿠 오모이데요코초</li>
       </li>
     </ul>
   </section>
 
   <section id="day5">
-    <h2>9월 19일 (금)</h2>
+    <h2>9월 19일 (금) : 마지막 날 ㅠ</h2>
     <ul>
-      <li>시부야 돈키호테 쇼핑
-        <div class="content">
-          나리타패스 이용 후 귀가
-        </div>
-      </li>
+     <li>시부야 돈키호테 쇼핑</li>
+     <li>나리타패스</li>
+     <li>집가기 ㅠㅠ</li>
     </ul>
   </section>
 
