--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
         <li>숙소
           <div class="content">
             <p>🏨 월,화,수 : 아사쿠사 에어비앤비</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d103661.14071897719!2d139.72809185820313!3d35.716118000000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec1f4a38893%3A0xd3f6485878320561!2zMy1jaMWNbWUtMi0xIEFzYWt1c2EsIFRhaXRvIENpdHksIFRva3lvIDExMS0wMDMyIOydvOuzuA!5e0!3m2!1sko!2skr!4v1757074989190!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p>🏨 수,목,금: 시부야 Hotel Will</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188caa2fdbf35d%3A0x8a3c21a6591ed9cb!2sHotel%20Will!5e0!3m2!1sko!2skr!4v1757075080521!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="map-container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d103661.14071897719!2d139.72809185820313!3d35.716118000000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec1f4a38893%3A0xd3f6485878320561!2zMy1jaMWNbWUtMi0xIEFzYWt1c2EsIFRhaXRvIENpdHksIFRva3lvIDExMS0wMDMyIOydvOuzuA!5e0!3m2!1sko!2skr!4v1757074989190!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+              <p>🏨 수,목,금: 시부야 Hotel Will</p>
+            <div class="map-container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188caa2fdbf35d%3A0x8a3c21a6591ed9cb!2sHotel%20Will!5e0!3m2!1sko!2skr!4v1757075080521!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
           </div>
         </li>
       </ul>
@@ -82,7 +86,9 @@
       <li>도쿄크루즈(아사쿠사 > 오다이바)
         <div class="content">
           11시 탑승, 모바일티켓: <a href="https://quickticket.moala.fun/books?id=ef71d6a9-a91c-456f-9ec4-4ed32c27f8d4">링크</a><br>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d809.8895795828621!2d139.79850566678067!3d35.71248519594947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec47f298a41%3A0x304e9b1688338d74!2z7JWE7IKs7L-g7IKsIOuLiO2FkOuqrCDshKDssKnsnqU!5e0!3m2!1sko!2skr!4v1757216198646!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d809.8895795828621!2d139.79850566678067!3d35.71248519594947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec47f298a41%3A0x304e9b1688338d74!2z7JWE7IKs7L-g7IKsIOuLiO2FkOuqrCDshKDssKnsnqU!5e0!3m2!1sko!2skr!4v1757216198646!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </li>
       <li>건담
