--- a/index.html
+++ b/index.html
@@ -94,11 +94,23 @@
       </li>
       <li>건담
         <div class="content">
+          <img src="0916/jumdan.jpg">
           변신시간 (주간) 11시 13시 15시 17시 (야간) 19시~21:30까지 30분단위
+          <img src="0916/jumdam2.jpeg">
+          건담카페도 가보자>_<!
         </div>
       </li>
-      <li>디지몬 성지순례</li>
-      <li>스몰월드x에바초호기</li>
+      <li>디지몬 성지순례
+        <div class="content">
+          <img src="0916/digimon1.jpg">
+          <img src="0916/digimon3.jpg">
+        </div>
+      </li>
+      <li>스몰월드x에바초호기
+        <div class="content">
+          <img src="0916/eva1.jpeg">
+        </div>
+      </li>
       <li>자유의 여신상</li>
       <li>지하철 타고 숙소 가기</li>
     </ul>
