--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <li>아사쿠사 숙소 체크인</li>
       <li>헬로사이클링
         <div class="content">
-          헬로 사이클링 하는 법 블로그 : <a herf="https://blog.naver.com/mujun_kim/223240915536">링크</a>
+          헬로 사이클링 하는 법 블로그 : <a href="https://blog.naver.com/mujun_kim/223240915536">링크</a>
         </div>
       </li>
       <li>센소지 구경</li>
