--- a/index.html
+++ b/index.html
@@ -75,9 +75,19 @@
       <li>헬로사이클링
         <div class="content">
           헬로 사이클링 하는 법 블로그 : <a href="https://blog.naver.com/mujun_kim/223240915536">링크</a>
+          <b>🗺️ 추천 자전거 코스</b>
+          아사쿠사역 → 센소지 → 카파바시도리 뒷골목 → 쿠라마에 → 아사쿠사역
+          특징: 센소지에서 시작하여 카파바시도리의 뒷골목과 쿠라마에 지역을 거쳐 돌아오는 코스로, 일본 전통과 현대가 어우러진 지역들을 자전거로 편안하게 탐방할 수 있습니다.
         </div>
       </li>
-      <li>센소지 구경</li>
+      <li>센소지 구경
+        <div class="content">
+          <img src="0915/0915_1.jpg">
+          엄청 유명한 사찰이야ㅋㅋ내가 알기론 귀칼에도 나왔어
+          <img src="0915/0915_2.jpg">
+          멋있어서 넣었당,, 저 황금 똥 건물 모지..
+        </div>
+      </li>
     </ul>
   </section>
 
