--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <img src="0916/jumdan.jpg">
           변신시간 (주간) 11시 13시 15시 17시 (야간) 19시~21:30까지 30분단위
           <img src="0916/jumdam2.jpeg">
-          건담카페도 가보자>_<!
+          건담카페도 가보자 !!
         </div>
       </li>
       <li>디지몬 성지순례
