--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
         <li>숙소
           <div class="content">
             <p>🏨 월,화,수 : 아사쿠사 에어비앤비</p>
+            <p>🏨 숙소 예약 내역 : <a href="https://mail.google.com/mail/mu/mp/515/#cv/tokyovoucher/19919bb34c7dfc28">링크</a></p>
             <div class="map-container">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d103661.14071897719!2d139.72809185820313!3d35.716118000000016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec1f4a38893%3A0xd3f6485878320561!2zMy1jaMWNbWUtMi0xIEFzYWt1c2EsIFRhaXRvIENpdHksIFRva3lvIDExMS0wMDMyIOydvOuzuA!5e0!3m2!1sko!2skr!4v1757074989190!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
               <p>🏨 수,목,금: 시부야 Hotel Will</p>
+              <p>🏨 숙소 예약 내역 : <a href="https://mail.google.com/mail/mu/mp/515/#cv/tokyovoucher/19919bca79834b82">링크</a></p>
             <div class="map-container">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188caa2fdbf35d%3A0x8a3c21a6591ed9cb!2sHotel%20Will!5e0!3m2!1sko!2skr!4v1757075080521!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -88,6 +90,11 @@
           멋있어서 넣었당,, 저 황금 똥 건물 모지..
         </div>
       </li>
+      <li>숙소 들어가기 전에
+        <div class="content">
+        마트에서 가루쿡이랑 야식거리 사서 들어가기 
+        </div>
+      </li>
     </ul>
   </section>
 
@@ -108,6 +115,9 @@
           변신시간 (주간) 11시 13시 15시 17시 (야간) 19시~21:30까지 30분단위
           <img src="0916/jumdam2.jpeg">
           건담카페도 가보자 !!
+          <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889f9d3522d23%3A0xf850caf38214ddd9!2z6rG064u067Kg7J207IqkIOuPhOy_hA!5e0!3m2!1sko!2skr!4v1757250117125!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </li>
       <li>디지몬 성지순례
@@ -132,7 +142,10 @@
       <li>아사쿠사 숙소 체크아웃</li>
       <li>닌자카페 12시 예약
         <div class="content">
-          ㅇㅇ
+          <div class="map-container">
+            <p>🥷닌자카페 예약 내역 : <a href="https://mail.google.com/mail/mu/mp/515/#cv/tokyovoucher/198e19f908e83728">링크</a></p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188e94e1c3d06f%3A0x6aeef619cd1e1524!2sNinja%20Experience%20Cafe%20Asakusa%20In%20Tokyo!5e0!3m2!1sko!2skr!4v1757250170881!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </li>
       <li>시부야 숙소 체크인</li>
