--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 <body id = '#top'>
  <audio id="audioPlayer" controls loop autoplay>
-  <source src="에반게리온.mp3" type="audio/mpeg">
+  <source src="main/에반게리온.mp3" type="audio/mpeg">
  </audio>
   
 <header>
@@ -162,7 +162,11 @@
       <li>기다리면서 시부야 프리쿠라</li>
       <li>신주쿠 이동</li>
       <li>신주쿠 가부키쵸 구경</li>
-      <li>JDM 자동차 투어</li>
+      <li>JDM 자동차 투어
+        <div class="contents">
+          
+        </div>
+      </li>
       <li>신주쿠 오모이데요코초</li>
       </li>
     </ul>
