--- a/index.html
+++ b/index.html
@@ -122,13 +122,22 @@
       </li>
       <li>디지몬 성지순례
         <div class="content">
-          <img src="0916/digimon1.jpg">
-          <img src="0916/digimon3.jpg">
+          <img src="0916/digimon1.jpg"><br>
+          <img src="0916/digimon3.jpg"><br>
+          후지TV
+          <img src="0916/digimon4.png"><br>
+          <img src="0916/digimon7.jpg"><br>
+          차원의 문 : 오다이바해변공원역 옆 빌딩
+          <img src="0916/digimon8.jpg"><br>
+          신태일네 집 : 오다이바해변경원역 옆 아파트
+          <img src="0916/digimon5.jpg"><br>
         </div>
       </li>
       <li>스몰월드x에바초호기
         <div class="content">
-          <img src="0916/eva1.jpeg">
+          <img src="0916/eva1.jpeg"><br>
+          <img src="0916/eva2.jpg"><br>
+          헉헉 머싯다;;
         </div>
       </li>
       <li>자유의 여신상</li>
