--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
           <img src="0916/eva1.jpeg"><br>
           <img src="0916/eva2.jpg"><br>
           헉헉 머싯다;;
+          <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d103709.62106441117!2d139.6524817890625!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889e79b851265%3A0x2f700d5e68285182!2zU01BTEwgV09STERTIOuvuOuLiOyWtOyymCDrrqTsp4Dsl4Q!5e0!3m2!1sko!2skr!4v1757330574586!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </li>
       <li>자유의 여신상</li>
