--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
           후지TV
           <img src="0916/digimon4.png"><br>
           <img src="0916/digimon7.jpg"><br>
-          차원의 문 : 오다이바해변공원역 옆 빌딩
+          차원의 문 : 오다이바해변공원역 옆 빌딩<br>
           <img src="0916/digimon8.jpg"><br>
-          신태일네 집 : 오다이바해변경원역 옆 아파트
-          <img src="0916/digimon5.jpg"><br>
+          신태일네 집 : 오다이바해변공원역 옆 아파트<br>
+          <img src="0916/digimon5.png"><br>
         </div>
       </li>
       <li>스몰월드x에바초호기
@@ -161,9 +161,30 @@
         </div>
       </li>
       <li>시부야 숙소 체크인</li>
-      <li>시부야 타워레코드</li>
-      <li>시부야 몬자야끼</li>
-      <li>시부야 라이브밴드공연</li>
+      <li>시부야 타워레코드
+        <div class="content">
+          <img src="0917/tower.jpeg"><br>
+          느좋음악 발굴해보자,,ㅎ
+          <div class="map-container">
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.6130187224926!2d139.69851031136594!3d35.66190487247919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca87eba86d5%3A0xc878b2fe3fed54f0!2z7YOA7JuMIOugiOy9lOuTnCDsi5zrtoDslbzsoJA!5e0!3m2!1sko!2skr!4v1757331106709!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+          </div>
+      </li>
+      <li>시부야 몬자야끼
+        <img src="0917/monja.png"><br>
+          충격 비주얼의 토구이~!<br>
+          <div class="map-container">
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d5cd4b42aa1%3A0x1b75d283cc22eeba!2z7Lig7YKk7Iuc66eI66qs7J6QIOyYpOy9lOqyjCDsi5zrtoDslbw!5e0!3m2!1sko!2skr!4v1757331226906!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+      </li>
+      <li>시부야 라이브밴드공연
+        <img src="0917/rubyroom2.jpg"><br>
+        난 봇치더락 느낌을 받고싶은데 어떨지 좀 걱정이야..<br>
+        <img src="0917/rubyroom.jpg"><br>
+        그래도 꼭 보고싶ㅇㅓ 일본 라이브밴드 공연!
+          <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca9c04fec51%3A0x2cd323c714bb5416!2sRuby%20Room!5e0!3m2!1sko!2skr!4v1757331351518!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+      </li>
     </ul>
   </section>
 
