--- a/index.html
+++ b/index.html
@@ -170,20 +170,24 @@
           </div>
       </li>
       <li>시부야 몬자야끼
-        <img src="0917/monja.png"><br>
-          충격 비주얼의 토구이~!<br>
-          <div class="map-container">
-           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d5cd4b42aa1%3A0x1b75d283cc22eeba!2z7Lig7YKk7Iuc66eI66qs7J6QIOyYpOy9lOqyjCDsi5zrtoDslbw!5e0!3m2!1sko!2skr!4v1757331226906!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
+        <div class="content">
+          <img src="0917/monja.png"><br>
+            충격 비주얼의 토구이~!<br>
+            <div class="map-container">
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d5cd4b42aa1%3A0x1b75d283cc22eeba!2z7Lig7YKk7Iuc66eI66qs7J6QIOyYpOy9lOqyjCDsi5zrtoDslbw!5e0!3m2!1sko!2skr!4v1757331226906!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
       </li>
       <li>시부야 라이브밴드공연
-        <img src="0917/rubyroom2.jpg"><br>
-        난 봇치더락 느낌을 받고싶은데 어떨지 좀 걱정이야..<br>
-        <img src="0917/rubyroom.jpg"><br>
-        그래도 꼭 보고싶ㅇㅓ 일본 라이브밴드 공연!
+        <div class="content">
+          <img src="0917/rubyroom2.jpg"><br>
+            난 봇치더락 느낌을 받고싶은데 어떨지 좀 걱정이야..<br>
+          <img src="0917/rubyroom.jpg"><br>
+            그래도 꼭 보고싶ㅇㅓ 일본 라이브밴드 공연!
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca9c04fec51%3A0x2cd323c714bb5416!2sRuby%20Room!5e0!3m2!1sko!2skr!4v1757331351518!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
+        </div>
       </li>
     </ul>
   </section>
@@ -192,15 +196,51 @@
     <h2>9월 18일 (목) : 이니셜D체험,,</h2>
     <ul>
       <li>유니클로 하라주쿠점 커스텀프린팅 오픈런</li>
-      <li>기다리면서 시부야 프리쿠라</li>
+      <li>기다리면서 시부야 프리쿠라
+       <div class="content">
+        <img src="0918/kura.jpeg"><br>
+         라이크 브래드피트<br>
+       </div>
+      </li>
       <li>신주쿠 이동</li>
-      <li>신주쿠 가부키쵸 구경</li>
-      <li>JDM 자동차 투어
-        <div class="contents">
-          
+      <li>신주쿠 가부키쵸 구경
+        <div class="content">
+          <img src="0918/kabuki.jpeg"><br>
+          지뢰계의 시작, 그곳은 가부키쵸<br>
+          <img src="0918/kabuki2.jpg"><br>
+          <img src="0918/kabuki3.jpg"><br>
+          여기서 사진찍자!<br>
+          글고 여기 삐끼 진~짜 많다 구경해보자 ㅋㅋ<br>
+          <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd84e865c35%3A0x33418e00dfeefac!2z7J2867O4IOOAkjE2MC0wMDIxIOuPhOy_hOuPhCDsi6Dso7zsv6Dqtawg6rCA67aA7YKk7LSI!5e0!3m2!1sko!2skr!4v1757332144501!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
         </div>
       </li>
-      <li>신주쿠 오모이데요코초</li>
+      <li>JDM 자동차 투어
+        <div class="contents">
+          우리 여행의 핵심! JDM자동차 투어<br>
+          <img src="0918/jdm2.jpeg"><br>
+          예약 바우처는 <a href="">여기</a><br>
+          투어 설명은 <a href="">여기</a><br>
+          <img src="0918/john.jpg"><br>
+          - 존이 신주쿠에서 픽업/드랍 해준다함<br>
+          - 가부키쵸 구경하다가 투어하고 신주쿠 구경 마저하자!!<br>
+          <img src="0918/gr86.jpg"><br>
+          우리가 탈 차!!!완전 기대된다!<br>
+          <img src="0918/tokyotower.png"><br>
+          도쿄타워 야경도 볼 수 있대❤️<br>
+        </div>
+      </li>
+      <li>신주쿠 오모이데요코초 or 골든가이
+        <div class="contents">
+          투어 끝나고 존한테 여기다 내려달라하자<br>
+          <img src="0918/omoi1.png"><br>
+          꼬치골목이야!~맥주마시장ㅎ<br>
+          <img src="0918/omoi2.jpeg"><br>
+          <div class="map-container"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12961.40413271236!2d139.68929411693574!3d35.69297839021252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd7058ad73f%3A0x908f55935cc13cd3!2z7Jik66qo7J20642w7JqU7L2U7LSI!5e0!3m2!1sko!2skr!4v1757333361654!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+          <br>아니면 골든가이<br>
+          <img src="0918/gold.png"><br>
+        </div>
       </li>
     </ul>
   </section>
@@ -208,6 +248,7 @@
   <section id="day5">
     <h2>9월 19일 (금) : 마지막 날 ㅠ</h2>
     <ul>
+     <li>전 날 일정이 좀 빡세니까 좀 쉬기</li>
      <li>시부야 돈키호테 쇼핑</li>
      <li>나리타패스</li>
      <li>집가기 ㅠㅠ</li>
