--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
       </li>
       <li>JDM 자동차 투어
-        <div class="contents">
+        <div class="content">
           우리 여행의 핵심! JDM자동차 투어<br>
           <img src="0918/jdm2.jpeg"><br>
           예약 바우처는 <a href="">여기</a><br>
@@ -232,7 +232,7 @@
         </div>
       </li>
       <li>신주쿠 오모이데요코초 or 골든가이
-        <div class="contents">
+        <div class="content">
           투어 끝나고 존한테 여기다 내려달라하자<br>
           <img src="0918/omoi1.png"><br>
           꼬치골목이야!~맥주마시장ㅎ<br>
