--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <li>신주쿠 이동</li>
       <li>신주쿠 가부키쵸 구경
         <div class="content">
-          <img src="0918/kabuki.jpeg"><br>
+          <img src="0918/kabuki.jpg"><br>
           지뢰계의 시작, 그곳은 가부키쵸<br>
           <img src="0918/kabuki2.jpg"><br>
           <img src="0918/kabuki3.jpg"><br>
