--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </li>
       <li>숙소 들어가기 전에
         <div class="content">
-        마트에서 가루쿡이랑 야식거리 사서 들어가기 
+        마트에서 가루쿡이랑 캐릭터 마스크팩이랑 야식거리 사서 들어가기 
         </div>
       </li>
     </ul>
