--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
       </tr>
     </tbody>
   </table>
-  <p><strong>팁:</strong> 24시간 영업하며, 3층에서 TAX-FREE 쇼핑이 가능합니다.</p>
+  <p><strong>팁:</strong> 24시간 영업, 3층에서 TAX-FREE 쇼핑 가능</p>
          <div class="map-container">
-           
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12966.695749152019!2d139.68753891691463!3d35.6604042974949!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca9a47a82af%3A0x7ea0d3bc82ce0275!2z66mU6rCAIOuPiO2CpO2YuO2FjCDsi5zrtoDslbwg67O47KCQ!5e0!3m2!1sko!2skr!4v1757334299060!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
          </div>
        </div>
      </li>
