--- a/index.html
+++ b/index.html
@@ -219,9 +219,10 @@
       <li>JDM 자동차 투어
         <div class="content">
           우리 여행의 핵심! JDM자동차 투어<br>
+          7시까지 약속장소로!John과 대화 필요
           <img src="0918/jdm2.jpeg"><br>
-          예약 바우처는 <a href="">여기</a><br>
-          투어 설명은 <a href="">여기</a><br>
+          예약 바우처는 <a href="https://mail.google.com/mail/mu/mp/515/#cv/tokyovoucher/198e1d20bed779d3">여기</a><br>
+          투어 설명은 <a href="https://www.agoda.com/ko-kr/activities/detail?activityId=1400803>여기</a><br>
           <img src="0918/john.jpg"><br>
           - 존이 신주쿠에서 픽업/드랍 해준다함<br>
           - 가부키쵸 구경하다가 투어하고 신주쿠 구경 마저하자!!<br>
