--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           - 존이 신주쿠에서 픽업/드랍 해준다함<br>
           - 가부키쵸 구경하다가 투어하고 신주쿠 구경 마저하자!!<br>
           <img src="0918/gr86.jpg"><br>
-          우리가 탈 차!!!완전 기대된다!<br>
+          우리가 탈 차!!! 토요타GR86 완전 기대된다!<br>
           <img src="0918/tokyotower.png"><br>
           도쿄타워 야경도 볼 수 있대❤️<br>
         </div>
