--- a/index.html
+++ b/index.html
@@ -301,8 +301,14 @@
          </div>
        </div>
      </li>
-     <li>나리타패스</li>
-     <li>집가기 ㅠㅠ</li>
+     <li>나리타익스프레스 3시에 타기
+       <div class="content">
+         - 시부야역 15:14 출발<br>
+         - 약 1시간 30분 소요<br>
+         - 면세점에서 동전 다 털기<br>         
+       </div>
+     </li>
+     <li>집가기ㅠㅠ</li>
     </ul>
   </section>
 
