--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
   <section id="day5">
     <h2>9월 19일 (금) : 마지막 날 ㅠ</h2>
     <ul>
-     <li>전 날 일정이 좀 빡세니까 좀 쉬기</li>
-     <li>시부야 돈키호테 쇼핑
+     <li>시부야 메가돈키 쇼핑
        <div class="content">
          <img src="0920/donki.png"><br>
              <table border="1" cellspacing="0" cellpadding="8">
