--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
     <h2>9월 17일 (수) : 닌자&시부야</h2>
     <ul>
       <li>아사쿠사 숙소 체크아웃</li>
-      <li>닌자카페 12시 예약
+      <li>닌자카페 12시 예약 음료 1잔
         <div class="content">
           <p>🥷닌자카페 예약 내역 : <a href="https://mail.google.com/mail/mu/mp/515/#cv/tokyovoucher/198e19f908e83728">링크</a></p>
+          <img src="0917/ninja.png">
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188e94e1c3d06f%3A0x6aeef619cd1e1524!2sNinja%20Experience%20Cafe%20Asakusa%20In%20Tokyo!5e0!3m2!1sko!2skr!4v1757250170881!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
