--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
       <li>도쿄크루즈(아사쿠사 > 오다이바)
         <div class="content">
           11시 탑승, 모바일티켓: <a href="https://quickticket.moala.fun/books?id=ef71d6a9-a91c-456f-9ec4-4ed32c27f8d4">링크</a><br>
+          <br><img src="0916/sumida.png"><br>
+          도쿄 스미다 강을 따라서...<br>
+          오다이바로...<br>
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d809.8895795828621!2d139.79850566678067!3d35.71248519594947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec47f298a41%3A0x304e9b1688338d74!2z7JWE7IKs7L-g7IKsIOuLiO2FkOuqrCDshKDssKnsnqU!5e0!3m2!1sko!2skr!4v1757216198646!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
