--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
           </div>
         </div>
       </li>
-      <li>자유의 여신상</li>
+      <li>자유의 여신상
+        <div class="content">
+          <img src="0916/free.png"><br>
+          일본은 1998년을 '프랑스의 해'로 선정하고 양국의 친선 사업으로 파리의 '자유의 여신상'을 1년간 대여해 옵니다. 그런데 반응이 너무 좋았던 거예요. 대여 기간이 끝나도 '자유의 여신상'을 두자는 요청이 쇄도했고, 결국 프랑스에서 복제품을 만들어 다시 오다이바섬에 세우게 됐죠. (많이들 가짜라고 생각하시는데 프랑스로부터 정식 인가받은 동상이라고.) 그렇게 놓인 '자유의 여신상'이 오늘날 오다이바의 상징물로 자리 잡게 된 거예요!
+        </div>
+      </li>
       <li>지하철 타고 숙소 가기</li>
     </ul>
   </section>
