--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
 </nav>
 
 <main>
-
+<section>
+  <div>
+    <table class="no-border-table">
+  <tr>
+    <td class="col-img">
+      <img src="profile/쨍난.jpeg">
+    </td>
+    <td class="col-text">
+      <h3>Welcome to our homepage</h3>
+    </td>
+  </tr>
+</table>
+  </div>
+</section>
   <section id="day0">
     <h2>항공/숙소</h2>
   <!-- 비밀번호 입력창 -->
