--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <table class="no-border-table">
   <tr>
     <td class="col-img">
-      <img src="profile/쨍난.jpeg">
+      <img src="profile/쨍난.jpg">
     </td>
     <td class="col-text">
       <h3>Welcome to our homepage</h3>
