--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 </nav>
 
 <main>
-<section>
-  <div class="content">
-    <table class="no-border-table">
+
+ <section id="day1">
+    <h2>9월 15일 (월) : 아사쿠사 한바끄~☆</h2>
+    <ul>
+      <table class="no-border-table">
       <tr>
         <td class="col-img">
           <img src="profile/쨍난.jpg" width="200px">
@@ -40,9 +42,9 @@
           <h3>Welcome to our homepage</h3>
         </td>
       </tr>
-    </table>
-  </div>
-</section>
+      </table>
+    </ul>
+  </section>
   
 <section id="day0">
     <h2>항공/숙소</h2>
