--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
 <main>
 
- <section id="day1">
-    <h2>9월 15일 (월) : 아사쿠사 한바끄~☆</h2>
+ <section id="00">
     <ul>
       <table class="no-border-table">
       <tr>
