--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <li>아사쿠사역 가기 : 스카이 액세스/게이세이특급
         <div class="content">
           아사쿠사역 가는 방법 블로그: <a href="https://blog.naver.com/c131444/223944626950">링크</a>
+          재원이 스이카 발급 및 충전: <a href="https://m.blog.naver.com/PostView.naver?blogId=lia_il&logNo=223382134183&proxyReferer=https:%2F%2Fwww.google.com%2F&trackingCode=external">링크</a>
         </div>
       </li>
       <li>아사쿠사 숙소 체크인</li>
