--- a/index.html
+++ b/index.html
@@ -87,10 +87,15 @@
     <h2>9월 15일 (월) : 아사쿠사 한바끄~☆</h2>
     <ul>
       <li>비행기</li>
+      <li>ATM에서 엔화 출금</li>
+        <div class="content">
+          재원이 교통카드 용 : 보증금 1500엔 + 5000엔<br>
+          유사시 대비 현금 : 20000엔 뽑기
+        </div>
       <li>아사쿠사역 가기 : 스카이 액세스/게이세이특급
         <div class="content">
           아사쿠사역 가는 방법 블로그: <a href="https://blog.naver.com/c131444/223944626950">링크</a>
-          재원이 스이카 발급 및 충전: <a href="https://m.blog.naver.com/PostView.naver?blogId=lia_il&logNo=223382134183&proxyReferer=https:%2F%2Fwww.google.com%2F&trackingCode=external">링크</a>
+          <br>재원이 스이카 발급 및 충전: <a href="https://m.blog.naver.com/PostView.naver?blogId=lia_il&logNo=223382134183&proxyReferer=https:%2F%2Fwww.google.com%2F&trackingCode=external">링크</a>
         </div>
       </li>
       <li>아사쿠사 숙소 체크인</li>
@@ -333,6 +338,7 @@
        <div class="content">
          - 시부야역 15:14 출발<br>
          - 약 1시간 30분 소요<br>
+         - 스이카 카드 환불 보증급 환급<br>
          - 면세점에서 동전 다 털기<br>         
        </div>
      </li>
