--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
     <h2>9월 15일 (월) : 아사쿠사 한바끄~☆</h2>
     <ul>
       <li>비행기</li>
-      <li>ATM에서 엔화 출금</li>
+      <li>ATM에서 엔화 출금
         <div class="content">
           재원이 교통카드 용 : 보증금 1500엔 + 5000엔<br>
           유사시 대비 현금 : 20000엔 뽑기
         </div>
+      </li>
       <li>아사쿠사역 가기 : 스카이 액세스/게이세이특급
         <div class="content">
           아사쿠사역 가는 방법 블로그: <a href="https://blog.naver.com/c131444/223944626950">링크</a>
