--- a/index.html
+++ b/index.html
@@ -238,6 +238,15 @@
        </div>
       </li>
       <li>신주쿠 이동</li>
+      <li>신주쿠의 낮
+        <div class="content">
+          신주쿠 구경거리<a href="https://gall.dcinside.com/mgallery/board/view/?id=nokanto&no=383703">링크</a><br>
+          <img src="0918/cat.jpg"><br>
+          야옹이 전광판<br>
+          <img src="0918/taito.jpeg"><br>
+          오탁쿠들 리듬게임하는거 구경하자
+        </div>
+      </li>
       <li>신주쿠 가부키쵸 구경
         <div class="content">
           <img src="0918/kabuki.jpg"><br>
@@ -246,6 +255,8 @@
           <img src="0918/kabuki3.jpg"><br>
           여기서 사진찍자!<br>
           글고 여기 삐끼 진~짜 많다 구경해보자 ㅋㅋ<br>
+          <img src="0918/gozilla.png"><br>
+          여기도 포토존이래
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd84e865c35%3A0x33418e00dfeefac!2z7J2867O4IOOAkjE2MC0wMDIxIOuPhOy_hOuPhCDsi6Dso7zsv6Dqtawg6rCA67aA7YKk7LSI!5e0!3m2!1sko!2skr!4v1757332144501!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
