--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
       </li>
       <li>센소지 구경
         <div class="content">
-          <img src="0915/0915_1.jpg">
-          엄청 유명한 사찰이야ㅋㅋ내가 알기론 귀칼에도 나왔어
-          <img src="0915/0915_2.jpg">
+          <img src="0915/0915_1.jpg"><br>
+          엄청 유명한 사찰이야ㅋㅋ내가 알기론 귀칼에도 나왔어<br>
+          <img src="0915/0915_2.jpg"><br>
           멋있어서 넣었당,, 저 황금 똥 건물 모지..
         </div>
       </li>
       <li>숙소 들어가기 전에
         <div class="content">
-        마트에서 가루쿡이랑 캐릭터 마스크팩이랑 야식거리 사서 들어가기 
+        마트/아사쿠사 돈키에서 가루쿡이랑 캐릭터 마스크팩이랑 야식거리 사서 들어가기 
         </div>
       </li>
     </ul>
@@ -141,9 +141,9 @@
       <li>건담
         <div class="content">
           <img src="0916/jumdan.jpg">
-          변신시간 (주간) 11시 13시 15시 17시 (야간) 19시~21:30까지 30분단위
-          <img src="0916/jumdam2.jpeg">
-          건담카페도 가보자 !!
+          변신시간 (주간) 11시 13시 15시 17시 (야간) 19시~21:30까지 30분단위<br>
+          <img src="0916/jumdam2.jpeg"><br>
+          건담카페도 가보자 !!<br>
           <div class="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889f9d3522d23%3A0xf850caf38214ddd9!2z6rG064u067Kg7J207IqkIOuPhOy_hA!5e0!3m2!1sko!2skr!4v1757250117125!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
@@ -217,10 +217,10 @@
         <div class="content">
           <img src="0917/rubyroom2.jpg"><br>
             난 봇치더락 느낌을 받고싶은데 어떨지 좀 걱정이야..<br>
-          <img src="0917/rubyroom.jpg"><br>
+          <img src="0917/live.png"><br>
             그래도 꼭 보고싶ㅇㅓ 일본 라이브밴드 공연!
           <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207419.24212882234!2d139.570084328125!3d35.67883246763549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca9c04fec51%3A0x2cd323c714bb5416!2sRuby%20Room!5e0!3m2!1sko!2skr!4v1757331351518!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.587514025552!2d139.69898649999996!3d35.66253309999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d99b2b7ebcf%3A0xf530897bab438c80!2sTOKIO%20TOKYO!5e0!3m2!1sko!2skr!4v1757846108233!5m2!1sko!2skr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </li>
