--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     </ul>
   </section>
   
+  <section id="01">
+    <h2>도쿄지도</h2>
+    <img src="main/tokyo1.png">
+  </section>
+  
 <section id="day0">
     <h2>항공/숙소</h2>
   <ul>
