--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <nav>
   <ul>
+    <li><a href="#01">도쿄지도</a></li>
     <li><a href="#day0">항공/숙소</a></li>
     <li><a href="#day1">9월 15일 (월)</a></li>
     <li><a href="#day2">9월 16일 (화)</a></li>
@@ -48,7 +49,9 @@
   
   <section id="01">
     <h2>도쿄지도</h2>
+    <ul>
     <img src="main/tokyo1.png">
+    </ul>
   </section>
   
 <section id="day0">
