--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       <li>비행기</li>
       <li>ATM에서 엔화 출금
         <div class="content">
+          트래블로그 출금법 <a href="https://m.blog.naver.com/PostView.naver?blogId=travelwallet&logNo=223092449168&proxyReferer=https:%2F%2Fwww.google.com%2F&trackingCode=external">링크</a>
           재원이 교통카드 용 : 보증금 1500엔 + 5000엔<br>
           유사시 대비 현금 : 20000엔 뽑기
         </div>
